add base templates

--- a/templates/section.html
+++ b/templates/section.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<section class="prose">
+<section class="prose prose-h1:font-bold">
   {{ section.content | safe }}
 </section>
 {% endblock %}
