--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,36 @@
+{% import "macros.html" as macros %}
+
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" class="bg-gray-50">
 
 <head>
   <meta charset="utf-8" />
   <title>Berkeley Math Tournament</title>
-  <link rel="stylesheet" type="text/css" href="/style.css">
+  <link rel="stylesheet" type="text/css" href="{{ get_url(path='style.css') }}">
 </head>
 
 <body>
-  {% block content %} {% endblock %}
+  <div class="max-w-3xl p-8 mx-auto flex flex-col gap-8">
+    {% block navbar %}
+    <nav class="flex flex-col items-center gap-4">
+      <img src="{{ get_url(path='logo.png') }}" width="80">
+      <p class="text-2xl font-bold">Berkeley Math Tournament</p>
+
+      <div class="flex gap-4">
+        {{ macros::nav_link(path="@/_index.md", label="Home") }}
+        {{ macros::nav_link(path="@/about.md", label="About") }}
+        {{ macros::nav_link(path="@/events/bmt-2023.md", label="BMT 2023") }}
+      </div>
+    </nav>
+    {% endblock %}
+
+    <hr>
+
+    <div class="flex flex-col gap-4">
+      {% block content %}{% endblock %}
+    </div>
+  </div>
 </body>
 
 </html>
