--- a/templates/macros.html
+++ b/templates/macros.html
@@ -7,7 +7,7 @@
 {% endmacro nav_link %}
 
 {% macro prose(content) %}
-<div class="prose prose-h1:font-bold prose-h1:mt-16 prose-a:text-blue-500 max-w-none">
+<div class="prose prose-h1:font-bold prose-h1:mt-16 first:prose-h1:mt-0 prose-a:text-blue-500 max-w-none">
     {{ content | safe }}
 </div>
 {% endmacro%}
