add title to pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Berkeley Math Tournament</title>
+  <title>
+    {% block title %}
+    Berkeley Math Tournament
+    {% endblock %}
+  </title>
   <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
