--- a/templates/page.html
+++ b/templates/page.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+{{ page.title }} • BMT
+{% endblock %}
+
 {% block content %}
 
 <div class="flex flex-col gap-3">
