--- a/templates/section.html
+++ b/templates/section.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+{{ section.title }} • BMT
+{% endblock %}
+
 {% block content %}
 {{ macros::prose(content=section.content) }}
 {% endblock %}
