--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
   <div class="max-w-4xl p-8 mx-auto flex flex-col gap-8">
     {% block navbar %}
     <nav class="flex flex-col items-center gap-4">
-      <img src="/logo.png" width="80">
+      <img src="/assets/logo.png" width="80">
       <p class="text-2xl font-bold">Berkeley Math Tournament</p>
 
       <div class="flex gap-4">
