--- a/templates/base.html
+++ b/templates/base.html
@@ -9,11 +9,14 @@ max-w-none" %}
 
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>
     {% block title %}
     Berkeley Math Tournament
     {% endblock %}
   </title>
+
   <link rel="stylesheet" type="text/css" href="/style.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
