fix wording + add to bar

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,7 @@ max-w-none" %}
         {{ macros::nav_link(path="@/about.md", label="About") }}
         {{ macros::nav_link(path="@/events/bmmt-2023.md", label="BmMT 2023") }}
         {{ macros::nav_link(path="@/events/bmt-2023.md", label="BMT 2023") }}
+        {{ macros::nav_link(path="@/events/archives.md", label="Archives") }}
       </div>
     </nav>
     {% endblock %}
