--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,7 @@ max-w-none" %}
         {{ macros::nav_link(path="@/_index.md", label="Home") }}
         {{ macros::nav_link(path="@/about.md", label="About") }}
         {{ macros::nav_link(path="@/events/bmmt-2023.md", label="BmMT 2023") }}
+        {{ macros::nav_link(path="@/events/archives.md", label="Archives") }}
       </div>
     </nav>
     {% endblock %}
