--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@ max-w-none" %}
       <div class="flex gap-4">
         {{ macros::nav_link(path="@/_index.md", label="Home") }}
         {{ macros::nav_link(path="@/about.md", label="About") }}
-        {{ macros::nav_link(path="@/events/bmmt-2023.md", label="BmMT 2023") }}
+        {{ macros::nav_link(path="@/events/bmt-2023.md", label="BMT 2023") }}
       </div>
     </nav>
     {% endblock %}
