--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,9 @@ max-w-none" %}
     {% endblock %}
   </title>
 
-  <link rel="stylesheet" type="text/css" href="/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="/style.css">
+
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -29,9 +31,9 @@ max-w-none" %}
 
 <body>
   <div class="max-w-4xl p-8 mx-auto flex flex-col gap-8">
-    {% block navbar %}
+    {% block header %}
     <nav class="flex flex-col items-center gap-4">
-      <img src="/assets/logo.png" width="80">
+      <img src="/assets/logo.png" alt="BMT Logo" width="80">
       <p class="text-2xl font-bold">Berkeley Math Tournament</p>
 
       <div class="flex gap-4">
@@ -60,6 +62,34 @@ max-w-none" %}
     <div class="flex flex-col gap-8">
       {% block content %}{% endblock %}
     </div>
+
+    <hr>
+
+    {% block footer %}
+    <div class="flex flex-col items-center justify-between md:items-start text-center md:flex-row gap-4 mb-12">
+      <div class="flex flex-col gap-6 items-center md:items-start">
+        <img class="-ml-1 grayscale brightness-0" src="/assets/logo.png" alt="BMT Logo" width="50">
+
+        <div class="flex gap-4 text-xl">
+          <a href="https://www.instagram.com/berkeley_mt/"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.tiktok.com/@berkeley_mt"><i class="bi bi-tiktok"></i></a>
+          <a href="mailto:questions@bmt.berkeley.edu"><i class="bi bi-envelope-fill"></i></a>
+        </div>
+      </div>
+
+      <div class="flex flex-col gap-4 items-center md:items-end md:text-right max-w-xs">
+        <a href="https://ocf.berkeley.edu">
+          <img src="http://ocf.berkeley.edu/hosting-logos/ocf-hosted-penguin-dark.svg" width="80"
+            alt="Hosted by the OCF" />
+        </a>
+
+        <p class="text-xs">
+          We are a student group acting independently of the University of California. We take full responsibility for
+          our organization and this web site.
+        </p>
+      </div>
+    </div>
+    {% endblock %}
   </div>
 </body>
 
