change slash character

--- a/templates/macros.html
+++ b/templates/macros.html
@@ -1,6 +1,6 @@
 {% macro nav_link(path, label) %}
 {% set href = get_url(path=path) %}
-<p class="first:hidden text-gray-400">/</p>
+<p class="first:hidden text-gray-400">⁄</p>
 <a href="{{ href }}" class="{% if current_url == href %} font-semibold {% endif %}">
     {{ label }}
 </a>
