--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@ max-w-none" %}
   <div class="max-w-4xl p-8 mx-auto flex flex-col gap-8">
     {% block header %}
     <nav class="flex flex-col items-center gap-4">
-      <img src="/assets/logo.png" alt="BMT Logo" width="80">
+      <a href="/"><img src="/assets/logo.png" alt="BMT Logo" width="80"></a>
       <p class="text-2xl font-bold">Berkeley Math Tournament</p>
 
       <div class="flex gap-4">
