show homepage content and add mailchimp form

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,10 @@
   </p>
 </div>
 
-{# <div class="{{ prose_cls }}">
+<hr>
+
+<div class="{{ prose_cls }}">
   {{ section.content | safe }}
-</div> #}
+</div>
+
 {% endblock %}
