--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 {% set new_news_post = news_section.pages | first %}
 {% if new_news_post %}
 <a href="{{ new_news_post.permalink }}"
-  class="bg-pink-50 hover:bg-pink-100 hover:-translate-y-1 transition-all border border-pink-200 p-4 rounded-xl grid grid-cols-[1fr_auto] gap-2">
+  class="bg-rose-50 hover:bg-rose-100 hover:-translate-y-1 transition-all border border-rose-200 p-4 rounded-xl grid grid-cols-[1fr_auto] gap-2">
   <p class="uppercase text-xs text-gray-500 flex gap-2 items-center">
     <i class="bi bi-megaphone-fill"></i>
     <span>News</span>
