--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,37 @@
 {% extends "base.html" %}
 
+{# Macro for news post notifications #}
+
+{% macro news_post(title, href) %}
+<a class="bg-rose-50 hover:bg-rose-100 hover:-translate-y-1 transition-all border border-rose-200 p-4 rounded-xl flex items-center gap-2"
+  href="{{ href }}">
+  <div class="flex-1 flex flex-col gap-2">
+    <p class="uppercase text-xs text-gray-500 flex gap-2 items-center">
+      <i class="bi bi-megaphone-fill"></i>
+      <span>News</span>
+    </p>
+    <p class="text-base font-medium">{{ title }}</p>
+  </div>
+
+  <i class="bi bi-chevron-right"></i>
+</a>
+{% endmacro %}
+
+{# =============================== #}
+{# = STARTING THE ACTUAL CONTENT = #}
+{# =============================== #}
+
 {% block content %}
 
+{# News post notification, if there is one #}
+
 {% set news_section = get_section(path="news/_index.md") %}
-{% set new_news_post = news_section.pages | first %}
-{% if new_news_post %}
-<a href="{{ new_news_post.permalink }}"
-  class="bg-rose-50 hover:bg-rose-100 hover:-translate-y-1 transition-all border border-rose-200 p-4 rounded-xl grid grid-cols-[1fr_auto] gap-2">
-  <p class="uppercase text-xs text-gray-500 flex gap-2 items-center">
-    <i class="bi bi-megaphone-fill"></i>
-    <span>News</span>
-  </p>
-
-  <span class="row-span-2 flex items-center">
-    <i class="bi bi-chevron-right"></i>
-  </span>
-
-  <p class="text-base font-medium">
-    {{ new_news_post.title }}
-  </p>
-</a>
+{% set news_post = news_section.pages | first %}
+{% if news_post %}
+{{ self::news_post(title=news_post.title, href=news_post.permalink) }}
 {% endif %}
+
+{# Main banner & description #}
 
 <div id="banner" class="bg-black p-8 rounded-xl">
   <p class="h-full text-3xl font-bold text-white flex flex-col justify-between">
@@ -41,6 +52,8 @@
 </div>
 
 <hr>
+
+{# Rest of content (rendered from markdown) #}
 
 <div class="{{ prose_cls }}">
   {{ section.content | safe }}
