--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
   <a href="{{ href }}"
     class="p-6 flex flex-col gap-4 group-hover:backdrop-sepia group-hover:backdrop-brightness-75 transition-all">
     <div class="flex flex-col gap-1">
-      <h3 class="font-bold text-2xl flex items-center gap-2">
+      <h3 class="font-bold text-lg md:text-2xl flex items-center gap-2">
         <span>{{ name }}</span>
         <i class="bi bi-chevron-right text-base transition-transform"></i>
       </h3>
@@ -54,8 +54,8 @@
 
 {# Main banner & description #}
 
-<div id="banner" class="bg-black p-8 rounded-xl">
-  <p class="h-full text-3xl font-bold text-white flex flex-col justify-between">
+<div id="banner" class="bg-black p-6 md:p-8 rounded-xl">
+  <p class="h-full text-xl md:text-3xl font-bold text-white flex flex-col justify-between">
     <span class="order-0 after:content-['…'] text-left">Promoting advanced math</span>
     <span class="order-2 before:content-['…'] text-right">to middle and high school students</span>
     <span class="order-1 text-center">
@@ -65,7 +65,7 @@
 </div>
 
 <div>
-  <p class="text-xl leading-relaxed">
+  <p class="text-lg md:text-xl leading-relaxed">
     A UC Berkeley student-led organization that aims to spread mathematics and the spirit of mathematical competition
     globally by presenting students with interesting, original, hand-crafted problems. As of 2023, we are one of the
     largest student-run math competitions on the West Coast with over 2,000 contestants.
@@ -76,7 +76,7 @@
 
 {# Events section #}
 
-<h2 class="font-bold text-3xl">Recent & Upcoming Events</h2>
+<h2 class="font-bold text-xl md:text-3xl">Recent & Upcoming Events</h2>
 
 <div class="flex flex-col md:grid grid-cols-6 gap-4 max-w-4xl">
   {{ self::event(
