--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
   name="BMT China 🇨🇳",
   date="December 2–3, 2023",
   href="http://www.seedasdan.asia/en/bmt-en/",
-  description="Our partner ASDAN serves students in China, Taiwan, Hong Kong, and Macau.
+  description="Our partner ASDAN serves students in China, Taiwan, Hong Kong, and Macau."
   ) }}
 
   {{ self::event(
