Add archives section

--- a/templates/base.html
+++ b/templates/base.html
@@ -56,6 +56,7 @@ max-w-none" %}
         {{ macros::nav_link(path="@/about.md", label="About") }}
         {{ macros::nav_link(path="@/sponsors/index.md", label="Sponsors") }}
         {{ macros::nav_link(path="@/events/bmt-2023.md", label="BMT 2023") }}
+        {{ macros::nav_link(path="@/archives/_index.md", label="Archives") }}
       </nav>
     </header>
     {% endblock %}
