--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 {% macro event(name, date, description, href, class="") %}
 <div class="group rounded-xl overflow-hidden {{ class }} transition-all hover:-translate-y-1">
   <a href="{{ href }}"
-    class="p-6 flex flex-col gap-4 group-hover:backdrop-sepia group-hover:backdrop-brightness-75 transition-all">
+    class="p-6 flex flex-col gap-4 group-hover:backdrop-sepia group-hover:backdrop-brightness-75 transition-all h-full">
     <div class="flex flex-col gap-1">
       <h3 class="font-bold text-lg md:text-2xl flex items-center gap-2">
         <span>{{ name }}</span>
