add bmt 2023 online to navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,7 @@ max-w-none" %}
         {{ macros::nav_link(path="@/sponsors/index.md", label="Sponsors") }}
         {{ macros::nav_link(path="@/archives/_index.md", label="Archives") }}
         {{ macros::nav_link(path="@/events/bmt-2023.md", label="BMT 2023") }}
+        {{ macros::nav_link(path="@/events/bmt-2023-online.md", label="BMT 2023 Online") }}
       </nav>
     </header>
     {% endblock %}
