add bmt 2023 online to homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -97,6 +97,14 @@
   ) }}
 
   {{ self::event(
+  class="col-span-6 bg-gradient-to-br from-slate-100 to-slate-300",
+  name="BMT 2023 Online",
+  date="January 13–14 and January 20, 2024",
+  href="/events/bmt-2023-online/",
+  description="The online version of our flagship high school tournament, for students who can’t make it to Berkeley!"
+  ) }}
+
+  {{ self::event(
   class="col-span-6 bg-gradient-to-br shadow-lg from-cyan-700 to-cyan-900 text-white",
   name="Berkeley mini Math Tournament 2023",
   date="April 15, 2023",
