fix various table issues

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 {% import "macros.html" as macros %}
 
 {% set_global prose_cls = "prose prose-h1:font-bold prose-h1:mt-16 first:prose-h1:mt-0 prose-a:text-blue-500
-max-w-none" %}
+prose-td:border-r last:prose-td:border-r-0 prose-th:border-r last:prose-th:border-r-0 max-w-none" %}
 
 <!DOCTYPE html>
 
