--- a/templates/base.html
+++ b/templates/base.html
@@ -11,11 +11,27 @@ prose-td:border-r last:prose-td:border-r-0 prose-th:border-r last:prose-th:borde
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>
-    {% block title %}
-    Berkeley Math Tournament
-    {% endblock %}
-  </title>
+  {% set title = section.title
+  | default(value=page.title
+  | default(value="Berkeley Math Tournament")) %}
+
+  <title>{{ title }}</title>
+  <meta name="og:title" content="{{ title }}" />
+
+  {% set description = section.description
+  | default(value=section.summary
+  | default(value=page.description
+  | default(value=page.summary
+  | default(value=""))))
+  | striptags %}
+
+  {% if description %}
+  <meta name="description" content="{{ description }}" />
+  <meta name="og:description" content="{{ description }}" />
+  {% endif %}
+
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Berkeley Math Tournament" />
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <link rel="preconnect" href="https://rsms.me/">
