--- a/templates/section.html
+++ b/templates/section.html
@@ -33,7 +33,17 @@
   <h2 class="mt-4 col-span-2 text-sm text-gray-400">{{ year }}</h2>
 
   {% for page in pages %}
-  <p class="text-gray-500 leading-7">{{ page.date | date(format="%b %-d") }}</p>
+  <p class="text-gray-400 leading-7 text-sm">
+    {% set date = page.date | date(format="%b %-d") %}
+    {% set time = page.date | date(format="%-I:%M %p") %}
+
+    {% if time == "12:00 AM" %}
+    <span class="text-gray-500 text-base">{{ date }}</span>
+    {% else %}
+    <span class="text-gray-500 text-base">{{ date }}</span>, {{ time }}
+    {% endif %}
+  </p>
+
   <p class="text-xl">
     <a href="{{ page.permalink | safe }}">{{ page.title }}</a>
   </p>
