--- a/static/input.css
+++ b/static/input.css
@@ -12,10 +12,39 @@
   }
 }
 
+.shadow-link {
+  @apply font-medium text-blue-500 transition-shadow;
+  box-shadow: inset 0 -0.3em theme("colors.blue.100");
+}
+
+.shadow-link:hover {
+  box-shadow: inset 0 -0.5em theme("colors.blue.200");
+}
+
 #banner {
   background-image:
     linear-gradient(rgba(0 0 0 / 75%), rgba(0 0 0 / 75%)),
     url(/assets/banner.jpg);
   background-size: cover;
   background-position: center;
+}
+
+#text-404 {
+  @apply bg-gradient-to-br from-teal-400 to-emerald-300 bg-clip-text text-transparent;
+  font-size: 12rem;
+  font-weight: bold;
+  position: relative;
+  --text-shadow: 1px 1px theme("colors.emerald.500"), 2px 2px theme("colors.emerald.500"), 3px 3px theme("colors.emerald.500"), 4px 4px theme("colors.emerald.500"), 5px 5px theme("colors.emerald.500");
+}
+
+#text-404::after {
+  @apply inset-0;
+  @apply transition-all;
+  transition-duration: 25ms;
+  position: absolute;
+  content: "404";
+  z-index: -1;
+  font-size: 12rem;
+  font-weight: bold;
+  text-shadow: var(--text-shadow);
 }
