--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@ prose-td:border-r last:prose-td:border-r-0 prose-th:border-r last:prose-th:borde
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Berkeley Math Tournament" />
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.min.css">
   <link rel="preconnect" href="https://rsms.me/">
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.css">
@@ -67,7 +67,7 @@ prose-td:border-r last:prose-td:border-r-0 prose-th:border-r last:prose-th:borde
 </head>
 
 <body>
-  <div class="max-w-4xl p-4 md:p-8 mx-auto flex flex-col gap-4 md:gap-8">
+  <div class="max-w-4xl min-h-screen p-4 md:p-8 mx-auto flex flex-col gap-4 md:gap-8">
     {% block header %}
     <header class="flex flex-col gap-4 text-center">
       <a class="mx-auto" href="/"><img src="/assets/logo.png" alt="BMT Logo" width="80"></a>
@@ -88,7 +88,7 @@ prose-td:border-r last:prose-td:border-r-0 prose-th:border-r last:prose-th:borde
 
     <hr>
 
-    <div class="flex flex-col gap-4 md:gap-8">
+    <div class="flex-1 flex flex-col gap-4 md:gap-8">
       {% block content %}{% endblock %}
     </div>
 
