--- a/templates/404.html
+++ b/templates/404.html
@@ -3,9 +3,9 @@
 {% block content %}
 <div class="flex-1 flex flex-col items-center justify-center">
   <p id="text-404">404</p>
-  <p class="text-gray-500 text-lg font-light">
+  <p class="text-gray-500 text-lg font-light prose">
     Page Not Found.
-    <a href="/" class="shadow-link">Go home?</a>
+    <a href="/" class="font-medium">Go home?</a>
   </p>
 </div>
 
