--- a/templates/archives/page.html
+++ b/templates/archives/page.html
@@ -1,7 +1,7 @@
 {% extends "page.html" %}
 
 {% block before_page_content %}
-<table class="{{ prose_cls }}">
+<table class="prose">
     <thead>
         <th>Round</th>
         {% for column in page.extra.archive.columns %}
