--- a/templates/index.html
+++ b/templates/index.html
@@ -136,7 +136,7 @@
 
 {# Rest of content (rendered from markdown) #}
 
-<div class="{{ prose_cls }}">
+<div class="prose">
   {{ section.content | safe }}
 </div>
 
