--- a/templates/page.html
+++ b/templates/page.html
@@ -14,7 +14,7 @@
 
 {% block before_page_content %}{% endblock %}
 
-<div class="{{ prose_cls }}">
+<div class="prose">
   {{ page.content | safe }}
 </div>
 
