--- a/templates/section.html
+++ b/templates/section.html
@@ -17,7 +17,7 @@
 {% block before_section_content %}{% endblock %}
 
 {% if section.content %}
-<div class="{{ prose_cls }}">
+<div class="prose">
   {{ section.content | safe }}
 </div>
 {% endif %}
