--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,9 @@
       <i class="bi bi-megaphone-fill"></i>
       <span>News</span>
     </p>
-    <p class="text-base font-medium">{{ title }}</p>
+    <p class="text-base font-medium">
+      {{ title | split(pat="\n") | join(sep=" • ") }}
+    </p>
   </div>
 
   <i class="bi bi-chevron-right"></i>
