--- a/templates/page.html
+++ b/templates/page.html
@@ -3,7 +3,9 @@
 {% block content %}
 
 <div class="flex flex-col gap-3">
-  <h1 class="text-3xl font-semibold">{{ page.title }}</h1>
+  <h1 class="text-3xl font-semibold">
+    {{ macros::newline_break(str=page.title) }}
+  </h1>
 
   {% if page.date %}
   <h2 class="text-xl">
