--- a/static/input.css
+++ b/static/input.css
@@ -6,12 +6,14 @@
   src: url('/fonts/IBMPlexSansVar-Roman.woff2') format('woff2-variations');
   font-family: 'IBM Plex Sans Variable';
   font-style: normal;
+  font-weight: 200 700;
 }
 
 @font-face {
   src: url('/fonts/IBMPlexSansVar-Italic.woff2') format('woff2-variations');
   font-family: 'IBM Plex Sans Variable';
   font-style: italic;
+  font-weight: 200 700;
 }
 
 :root {
