update homepage for bmmt 2024

--- a/templates/base.html
+++ b/templates/base.html
@@ -73,8 +73,8 @@
         {{ macros::nav_link(path="@/about.md", label="About") }}
         {{ macros::nav_link(path="@/sponsors/index.md", label="Sponsors") }}
         {{ macros::nav_link(path="@/archives/_index.md", label="Archives") }}
-        {{ macros::nav_link(path="@/events/bmt-2023.md", label="BMT 2023") }}
         {{ macros::nav_link(path="@/events/bmt-2023-online.md", label="BMT 2023 Online") }}
+        {{ macros::nav_link(path="@/events/bmmt-2024.md", label="BmMT 2024") }}
       </nav>
     </header>
     {% endblock %}
