update contact email

--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
         <div class="flex gap-4 text-xl">
           <a href="https://www.instagram.com/berkeley_mt/"><i class="bi bi-instagram"></i></a>
           <a href="https://www.tiktok.com/@berkeley_mt"><i class="bi bi-tiktok"></i></a>
-          <a href="mailto:questions@bmt.berkeley.edu"><i class="bi bi-envelope-fill"></i></a>
+          <a href="mailto:team@berkeley.mt"><i class="bi bi-envelope-fill"></i></a>
         </div>
       </div>
 
