--- a/templates/shortcodes/alert.html
+++ b/templates/shortcodes/alert.html
@@ -1,6 +1,14 @@
-<div class="bg-rose-50 border border-rose-200 p-4 rounded-xl flex not-prose flex-1 flex flex-col gap-2">
+{% if not status or status == "error" %}
+  {% set class = "bg-rose-50 border-rose-200" %}
+  {% set icon_class = "bi bi-exclamation-triangle-fill" %}
+{% elif status == "info" %}
+  {% set class = "bg-blue-50 border-blue-200" %}
+  {% set icon_class = "bi bi-info-circle-fill" %}
+{% endif %}
+
+<div class="{{ class }} border p-4 rounded-xl not-prose flex-1 flex flex-col gap-2">
   <p class="uppercase text-xs text-gray-500 flex gap-2 items-center">
-    <i class="bi bi-megaphone-fill"></i>
+    <i class="{{ icon_class }}"></i>
     <span>{{ title }}</span>
   </p>
   <p class="text-base font-medium">{{ body }}</p>
