--- a/templates/page.html
+++ b/templates/page.html
@@ -16,8 +16,17 @@
 
 {% block before_page_content %}{% endblock %}
 
-<div class="prose">
+<main id="content" class="prose">
   {{ page.content | safe }}
+</main>
+
+{% if page.toc %}
+<div class="hidden xl:block absolute -right-8 translate-x-full h-full max-w-48">
+  <nav id="toc" class="sticky top-8">
+    {{ macros::toc(toc=page.toc) }}
+  </nav>
 </div>
+{{ macros::toc_js() }}
+{% endif %}
 
 {% endblock %}
