--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,7 @@
 
     <hr>
 
-    <div class="flex-1 flex flex-col gap-4 md:gap-8">
+    <div id="content-wrapper" class="flex-1 flex flex-col gap-4 md:gap-8 relative">
       {% block content %}{% endblock %}
     </div>
 
